Rewrite task 22